[workspace]
resolver = "3"
members = [
    "iac-rs",
    "auto-derive",
    "auto-net",
    "autogpt",
]
exclude = [
    "examples",
    "target"
]

[workspace.dependencies]
anyhow = "1.0.100"
serde_json = "1.0.115"
tracing = "0.1.40"
webbrowser = "1.0.1"
colored = "2.1.0"
futures = "0.3.31"
async-trait = "0.1.88"
auto-derive = { version = "0.0.8", path = "./auto-derive" }
iac-rs = { version = "0.0.6", path = "./iac-rs" }
chrono = "0.4.41"
derivative = "2.2.0"
duckduckgo = "0.2.0"

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
