[package]
name = "auto-net"
version = "0.0.1"
edition = "2024"
description = "iac auto network macro crate."
license = "MIT"
keywords = ["iac", "iac-macro", "autogpt"]
repository = "https://github.com/kevin-rs/autogpt"
documentation = "https://docs.rs/auto-net"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
