[package]
name = "iac-rs"
version = "0.0.2"
description = "🛰️ IAC Protocol for Inter and Intra Agents Communications."
edition = "2024"
rust-version = "1.85"
license = "MIT"
keywords = ["iac", "agents", "ai", "autogpt", "agi"]
categories = ["web-programming", "science"]
repository = "https://github.com/kevin-rs/autogpt"
documentation = "https://docs.rs/iac-rs"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["assets", "tests"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ed25519-compact = "2.1.1"
prost = "0.14.1"
quinn = "0.11.8"
rcgen = "0.13.2"
rustls = "0.23.28"
zstd = "0.13.3"
tokio = { version = "1.45.1", default-features = false }
rand = "0.9.1"
auto-net = "0.0.1"
async-trait = { workspace = true }
futures.workspace = true

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.14.1"

# sudo apt install protobuf-compiler
# export PROTOC=$(which protoc)  

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
