[package]
name = "gemini-custom-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
autogpt = { path = "../../autogpt", default-features = false, features = ["gem"] }

[features]
gem = ["autogpt/gem"]
net = []
mem = []
oai = []
cld = []
xai = []
